refactor: added GTC to all names

--- a/templates/config-ventmash-colibri-650.json
+++ b/templates/config-ventmash-colibri-650.json
@@ -1,9 +1,9 @@
 {
-  "device_type": "Ventmachine-Colibri-650",
+  "device_type": "Ventmachine-Colibri-650-GTC",
   "group": "g-climate-control",
   "device": {
-    "name": "Ventmachine Colibri 650",
-    "id": "colibri_650",
+    "name": "Ventmachine Colibri 650 GTC",
+    "id": "colibri_650_gtc",
     "guard_interval_us": 4000,
     "groups": [
       {
