refactor: return to guard_interval_us method

--- a/templates/config-ventmash-colibri-650.json
+++ b/templates/config-ventmash-colibri-650.json
@@ -4,7 +4,8 @@
   "device": {
     "name": "Ventmachine Colibri 650 GTC",
     "id": "colibri_650_gtc",
-    "force_frame_timeout": true,
+    "guard_interval_us": 4000,
+    
 
     "channels": [
       {
