refactor: restore defaults as fix was elsewhere

--- a/templates/config-ventmash-colibri-650-gtc.json
+++ b/templates/config-ventmash-colibri-650-gtc.json
@@ -4,7 +4,7 @@
   "device": {
     "name": "Ventmachine Colibri 650 GTC",
     "id": "colibri_650_gtc",
-    "guard_interval_us": 4000,
+    "force_frame_timeout": true,
     
 
     "channels": [
