--- a/templates/config-onokom-air-dk-5-mb-b-depricated.json
+++ b/templates/config-onokom-air-dk-5-mb-b-depricated.json
@@ -1,15 +1,16 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-MD-3-MB-B",
+    "device_type": "ONOKOM-AIR-DK-5-MB-B",
+    "deprecated": true,
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "MD-3-MB-B"
+            "signature": "DK-5-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-MD-3-MB-B",
-        "id": "ONOKOM-AIR-MD-3-MB-B",
+        "name": "ONOKOM-AIR-DK-5-MB-B",
+        "id": "ONOKOM-AIR-DK-5-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -27,14 +28,19 @@
                 "order": 3
             },
             {
-                "title": "Additional",
-                "id": "additional",
-                "order": 4
-            },
-            {
                 "title": "HW Info",
                 "id": "hw_info",
                 "order": 6
+            },
+            {
+                "title": "Setup",
+                "id": "setup",
+                "order": 7
+            },
+            {
+                "title": "Errors",
+                "id": "errors",
+                "order": 8
             },
             {
                 "title": "Debug",
@@ -270,6 +276,8 @@
                 "address": 7,
                 "type": "value",
                 "format": "u16",
+                "min": 0,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
@@ -350,55 +358,17 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Indoor heat exchanger temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 23,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
-                "name": "Outdoor heat exchanger temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 24,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
                 "name": "Target temperature",
                 "reg_type": "holding",
                 "address": 5,
                 "type": "range",
                 "format": "s16",
                 "min": 16,
-                "max": 30,
+                "max": 32,
                 "scale": 0.01,
                 "sporadic": true,
                 "group": "temperatureControl",
                 "units": "deg C"
-            },
-            {
-                "name": "Temperature correction",
-                "reg_type": "holding",
-                "address": 20,
-                "type": "value",
-                "format": "s16",
-                "min": -30,
-                "max": 30,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
                 "name": "Thermostat state",
@@ -441,7 +411,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 1,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "condition": "Show_vanes_as_range==1"
@@ -452,15 +422,27 @@
                 "address": 9,
                 "type": "value",
                 "format": "u16",
+                "min": 0,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "enum": [
                     0,
-                    1
+                    1,
+                    2,
+                    3,
+                    4,
+                    5,
+                    6
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Swing"
+                    "Swing",
+                    "Lowest",
+                    "Low",
+                    "Middle",
+                    "High",
+                    "Highest"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -486,35 +468,58 @@
                 "group": "vanes",
                 "enum": [
                     0,
-                    2
+                    1,
+                    2,
+                    3
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Horizontal vanes swing"
+                    "Horizontal and vertical swing",
+                    "Swinging horizontal blinds",
+                    "Swinging vertical blinds"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
             {
-                "name": "Eco mode",
-                "enabled": false,
+                "name": "Temeperature correction",
+                "reg_type": "holding",
+                "address": 20,
+                "type": "value",
+                "format": "s16",
+                "min": -30,
+                "max": 30,
+                "sporadic": true,
+                "group": "temperatureControl",
+                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
+            },
+            {
+                "name": "AC connected",
                 "reg_type": "coil",
-                "address": 6,
+                "address": 20,
                 "type": "switch",
                 "sporadic": true,
-                "group": "additional",
+                "group": "debug",
                 "readonly": true
             },
             {
-                "name": "FW Version",
-                "enabled": false,
+                "name": "Indoor unit model",
                 "reg_type": "holding",
-                "address": 250,
+                "address": 500,
                 "type": "text",
                 "format": "string",
-                "sporadic": true,
-                "group": "hw_info",
+                "group": "setup",
                 "readonly": true,
-                "string_data_size": 16
+                "string_data_size": 15
+            },
+            {
+                "name": "Outdoor unit model",
+                "reg_type": "holding",
+                "address": 520,
+                "type": "text",
+                "format": "string",
+                "group": "setup",
+                "readonly": true,
+                "string_data_size": 15
             },
             {
                 "name": "HW Version",
@@ -529,14 +534,16 @@
                 "string_data_size": 20
             },
             {
-                "name": "MCU Temperature",
+                "name": "FW Version",
                 "enabled": false,
-                "reg_type": "input",
-                "address": 124,
-                "type": "temperature",
-                "format": "s16",
-                "scale": 0.1,
-                "group": "hw_info"
+                "reg_type": "holding",
+                "address": 250,
+                "type": "text",
+                "format": "string",
+                "sporadic": true,
+                "group": "hw_info",
+                "readonly": true,
+                "string_data_size": 16
             },
             {
                 "name": "PROTO Version",
@@ -551,24 +558,6 @@
                 "string_data_size": 16
             },
             {
-                "name": "Reboot Device",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 120,
-                "type": "pushbutton",
-                "group": "hw_info"
-            },
-            {
-                "name": "Serial",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 270,
-                "type": "text",
-                "format": "u32",
-                "group": "hw_info",
-                "readonly": true
-            },
-            {
                 "name": "Signature",
                 "enabled": false,
                 "reg_type": "input",
@@ -581,6 +570,16 @@
                 "string_data_size": 12
             },
             {
+                "name": "Serial",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 270,
+                "type": "text",
+                "format": "u32",
+                "group": "hw_info",
+                "readonly": true
+            },
+            {
                 "name": "Uptime",
                 "enabled": false,
                 "reg_type": "input",
@@ -590,82 +589,124 @@
                 "group": "hw_info"
             },
             {
-                "name": "AC connected",
-                "reg_type": "coil",
-                "address": 20,
-                "type": "switch",
-                "sporadic": true,
-                "group": "debug",
+                "name": "MCU Temperature",
+                "enabled": false,
+                "reg_type": "input",
+                "address": 124,
+                "type": "temperature",
+                "format": "s16",
+                "scale": 0.1,
+                "group": "hw_info"
+            },
+            {
+                "name": "Reboot Device",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 120,
+                "type": "pushbutton",
+                "group": "hw_info"
+            },
+            {
+                "name": "Gateway mode",
+                "reg_type": "holding",
+                "address": 656,
+                "type": "value",
+                "min": 0,
+                "max": 2,
+                "group": "setup",
+                "enum": [
+                    0,
+                    1,
+                    2
+                ],
+                "enum_titles": [
+                    "LISTEN_ONLY",
+                    "EMULATE_M_WRC",
+                    "EMULATE_S_WRC"
+                ]
+            },
+            {
+                "name": "Error code",
+                "reg_type": "input",
+                "address": 1,
+                "type": "value",
+                "group": "errors",
                 "readonly": true
             }
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR MD-3-MB-B (Adapter for semi-industrial MDV systems)"
+                "template_title": "ONOKOM AIR DK-5-MB-B (Adapter for VRF DAIKIN systems)"
             },
             "ru": {
+                "template_title": "ONOKOM AIR DK-5-MB-B (Адаптер для мультизональных систем DAIKIN)",
                 "General": "Основные режимы и функции",
-                "Temperature control": "Контроль температуры",
-                "Vanes": "Жалюзи",
-                "Additional": "Дополнительные режимы и функции",
-                "HW Info": "Данные модуля",
-                "Debug": "Диагностика",
-                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
-                "No": "Нет",
-                "Yes": "Да",
-                "Show modes as range": "Отображать режимы как ползунок",
-                "Show fan as range": "Отображать вентилятор как ползунок",
-                "Show vanes as range": "Отображать жалюзи как ползунок",
-                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
-                "Baud rate": "Скорость обмена",
-                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
-                "Parity bit": "Бит чётности",
-                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
                 "Active": "Состояние",
                 "Mode": "Режим",
+                "Active mode": "Состояние и режим",
+                "Fan speed": "Скорость вентилятора",
+                "Smart fan speed": "Скорость вентилятора расширенная",
+                "Show modes as range": "Отображать режимы как ползунок",
+                "Off": "Выключен",
                 "Heat": "Нагрев",
                 "Cool": "Охлаждение",
                 "Auto": "Авто",
                 "Dry": "Осушение",
                 "Fan": "Вентиляция",
-                "Active mode": "Состояние и режим",
-                "Off": "Выключен",
-                "Fan speed": "Скорость вентилятора",
-                "1 Speed": "1 Скорость",
-                "2 Speed": "2 Скорость",
-                "3 Speed": "3 Скорость",
-                "Smart fan speed": "Скорость вентилятора расширенная",
-                "Indoor air temperature": "Температура воздуха в помещении",
-                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
-                "Outdoor heat exchanger temperature": "Температура внешнего теплообменника",
-                "Target temperature": "Целевая температура",
-                "Temperature correction": "Коррекция температуры",
-                "Thermostat state": "Состояние термостата",
                 "Idle": "Простаивает",
                 "Heating": "Нагрев",
                 "Cooling": "Охлаждение",
+                "Temperature control": "Контроль температуры",
+                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
+                "Indoor air temperature": "Температура воздуха в помещении",
+                "Target temperature": "Целевая температура",
+                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
+                "Thermostat state": "Состояние термостата",
+                "Vanes": "Жалюзи",
+                "Show vanes as range": "Отображать жалюзи как ползунок",
                 "Horizontal vanes": "Горизонтальные жалюзи",
-                "Stop": "Остановлены",
                 "Swing": "Качание",
+                "Lowest": "Самое низкое",
+                "Low": "Низкое",
+                "Middle": "Среднее",
+                "High": "Высокое",
+                "Highest": "Самое высокое",
                 "Vanes swing": "Качание жалюзи",
-                "Horizontal vanes swing": "Качание горизонтальных жалюзи",
-                "Eco mode": "Режим эко",
-                "FW Version": "Версия прошивки",
+                "Stop": "Остановлены",
+                "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
+                "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
+                "Swinging vertical blinds": "Качание вертикальных жалюзи",
+                "Show fan as range": "Отображать вентилятор как ползунок",
+                "1 Speed": "1 Скорость",
+                "2 Speed": "2 Скорость",
+                "3 Speed": "3 Скорость",
+                "No": "Нет",
+                "Yes": "Да",
+                "Baud rate": "Скорость обмена",
+                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
+                "Parity bit": "Бит чётности",
+                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
+                "HW Info": "Данные модуля",
                 "HW Version": "Версия устройства",
-                "MCU Temperature": "Температура МК",
+                "FW Version": "Версия прошивки",
                 "PROTO Version": "Версия протокола",
-                "Reboot Device": "Перезагрузить устройство",
-                "Serial": "Серийный номер",
                 "Signature": "Сигнатура устройства",
                 "Uptime": "Время работы с момента включения (с)",
+                "MCU Temperature": "Температура МК",
+                "Serial": "Серийный номер",
+                "Reboot Device": "Перезагрузить устройство",
+                "Setup": "Настройки",
+                "Gateway mode": "Режим шлюза",
+                "LISTEN_ONLY": "Слушатель",
+                "EMULATE_M_WRC": "Главный",
+                "EMULATE_S_WRC": "Ведомый",
+                "Outdoor unit model": "Наружный блок",
+                "Indoor unit model": "Внутренний блок",
+                "Debug": "Диагностика",
+                "Temeperature correction": "Коррекция температуры",
                 "AC connected": "Кондиционер подключен",
-                "Normal mode": "Обычный режим",
-                "Disabled if no errors": "Отключен если нет ошибок",
-                "Disabled untill reboot": "Отключен до перезагрузки",
-                "Always disabled": "Всегда отключен",
-                "Green untill reboot": "Зеленый до перезагрузки",
-                "Red untill reboot": "Красный до перезагрузки",
-                "template_title": "ONOKOM AIR MD-3-MB-B (Адаптер для полупромышленных систем MDV)"
+                "Errors": "Ошибки",
+                "Error code": "Код ошибки"
             }
         }
     }
