--- a/templates/config-onokom-air-gr-1-mb-b.json
+++ b/templates/config-onokom-air-gr-1-mb-b.json
@@ -49,22 +49,6 @@
         ],
         "parameters": [
             {
-                "id": "Disable_screen_when_power_off",
-                "title": "Disable screen when power off",
-                "address": 41,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "indication",
-                "order": 1
-            },
-            {
                 "id": "Allow_the_use_of_an_external_temperature_sensor",
                 "title": "Allow the use of an external temperature sensor",
                 "address": 100,
@@ -291,8 +275,6 @@
                 "address": 7,
                 "type": "value",
                 "format": "u16",
-                "min": 0,
-                "max": 5,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
@@ -411,6 +393,18 @@
                 "units": "deg C"
             },
             {
+                "name": "Temperature correction",
+                "reg_type": "holding",
+                "address": 20,
+                "type": "value",
+                "format": "s16",
+                "min": -30,
+                "max": 30,
+                "sporadic": true,
+                "group": "temperatureControl",
+                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
+            },
+            {
                 "name": "Thermostat state",
                 "reg_type": "holding",
                 "address": 6,
@@ -462,8 +456,6 @@
                 "address": 9,
                 "type": "value",
                 "format": "u16",
-                "min": 0,
-                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "enum": [
@@ -483,48 +475,6 @@
                     "Middle",
                     "High",
                     "Highest"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 6,
-                "sporadic": true,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
-                "type": "value",
-                "format": "u16",
-                "min": 0,
-                "max": 6,
-                "sporadic": true,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    1,
-                    2,
-                    3,
-                    4,
-                    5,
-                    6
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Swing",
-                    "Far Left",
-                    "Left",
-                    "Middle",
-                    "Right",
-                    "Far Right"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -556,44 +506,57 @@
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Horizontal and vertical swing",
-                    "Swinging horizontal blinds",
-                    "Swinging vertical blinds"
+                    "Horizontal and vertical vanes swing",
+                    "Horizontal vanes swing",
+                    "Vertical vanes swing"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
             {
-                "name": "Quiet mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 4,
-                "type": "switch",
+                "name": "Vertical vanes",
+                "reg_type": "holding",
+                "address": 10,
+                "type": "range",
+                "format": "u16",
+                "min": 0,
+                "max": 6,
                 "sporadic": true,
-                "group": "additional"
+                "group": "vanes",
+                "condition": "Show_vanes_as_range==1"
+            },
+            {
+                "name": "Vertical vanes",
+                "reg_type": "holding",
+                "address": 10,
+                "type": "value",
+                "format": "u16",
+                "sporadic": true,
+                "group": "vanes",
+                "enum": [
+                    0,
+                    1,
+                    2,
+                    3,
+                    4,
+                    5,
+                    6
+                ],
+                "enum_titles": [
+                    "Stop",
+                    "Swing",
+                    "Far Left",
+                    "Left",
+                    "Middle",
+                    "Right",
+                    "Far Right"
+                ],
+                "condition": "Show_vanes_as_range!=1"
             },
             {
                 "name": "Eco mode",
                 "enabled": false,
                 "reg_type": "coil",
                 "address": 6,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Turbo mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 7,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Sleep mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 8,
                 "type": "switch",
                 "sporadic": true,
                 "group": "additional"
@@ -608,12 +571,31 @@
                 "group": "additional"
             },
             {
-                "name": "Screen light",
+                "name": "Quiet mode",
+                "enabled": false,
                 "reg_type": "coil",
-                "address": 2,
+                "address": 4,
                 "type": "switch",
                 "sporadic": true,
-                "group": "indication"
+                "group": "additional"
+            },
+            {
+                "name": "Sleep mode",
+                "enabled": false,
+                "reg_type": "coil",
+                "address": 8,
+                "type": "switch",
+                "sporadic": true,
+                "group": "additional"
+            },
+            {
+                "name": "Turbo mode",
+                "enabled": false,
+                "reg_type": "coil",
+                "address": 7,
+                "type": "switch",
+                "sporadic": true,
+                "group": "additional"
             },
             {
                 "name": "Disable screen when power off",
@@ -625,37 +607,12 @@
                 "group": "indication"
             },
             {
-                "name": "Temeperature correction",
-                "reg_type": "holding",
-                "address": 20,
-                "type": "value",
-                "format": "s16",
-                "min": -30,
-                "max": 30,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
-            },
-            {
-                "name": "AC connected",
+                "name": "Screen light",
                 "reg_type": "coil",
-                "address": 20,
+                "address": 2,
                 "type": "switch",
                 "sporadic": true,
-                "group": "debug",
-                "readonly": true
-            },
-            {
-                "name": "HW Version",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 200,
-                "type": "text",
-                "format": "string",
-                "sporadic": true,
-                "group": "hw_info",
-                "readonly": true,
-                "string_data_size": 20
+                "group": "indication"
             },
             {
                 "name": "FW Version",
@@ -670,6 +627,28 @@
                 "string_data_size": 16
             },
             {
+                "name": "HW Version",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 200,
+                "type": "text",
+                "format": "string",
+                "sporadic": true,
+                "group": "hw_info",
+                "readonly": true,
+                "string_data_size": 20
+            },
+            {
+                "name": "MCU Temperature",
+                "enabled": false,
+                "reg_type": "input",
+                "address": 124,
+                "type": "temperature",
+                "format": "s16",
+                "scale": 0.1,
+                "group": "hw_info"
+            },
+            {
                 "name": "PROTO Version",
                 "enabled": false,
                 "reg_type": "input",
@@ -680,6 +659,24 @@
                 "group": "hw_info",
                 "readonly": true,
                 "string_data_size": 16
+            },
+            {
+                "name": "Reboot Device",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 120,
+                "type": "pushbutton",
+                "group": "hw_info"
+            },
+            {
+                "name": "Serial",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 270,
+                "type": "text",
+                "format": "u32",
+                "group": "hw_info",
+                "readonly": true
             },
             {
                 "name": "Signature",
@@ -694,16 +691,6 @@
                 "string_data_size": 12
             },
             {
-                "name": "Serial",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 270,
-                "type": "text",
-                "format": "u32",
-                "group": "hw_info",
-                "readonly": true
-            },
-            {
                 "name": "Uptime",
                 "enabled": false,
                 "reg_type": "input",
@@ -713,22 +700,13 @@
                 "group": "hw_info"
             },
             {
-                "name": "MCU Temperature",
-                "enabled": false,
-                "reg_type": "input",
-                "address": 124,
-                "type": "temperature",
-                "format": "s16",
-                "scale": 0.1,
-                "group": "hw_info"
-            },
-            {
-                "name": "Reboot Device",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 120,
-                "type": "pushbutton",
-                "group": "hw_info"
+                "name": "AC connected",
+                "reg_type": "coil",
+                "address": 20,
+                "type": "switch",
+                "sporadic": true,
+                "group": "debug",
+                "readonly": true
             }
         ],
         "translations": {
@@ -736,82 +714,88 @@
                 "template_title": "ONOKOM AIR GR-1-MB-B (Adapter for household GREE systems)"
             },
             "ru": {
-                "template_title": "ONOKOM AIR GR-1-MB-B (Адаптер для бытовых систем GREE)",
                 "General": "Основные режимы и функции",
+                "Temperature control": "Контроль температуры",
+                "Vanes": "Жалюзи",
+                "Additional": "Дополнительные режимы и функции",
+                "Indication": "Индикация",
+                "HW Info": "Данные модуля",
+                "Debug": "Диагностика",
+                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
+                "No": "Нет",
+                "Yes": "Да",
+                "Show modes as range": "Отображать режимы как ползунок",
+                "Show fan as range": "Отображать вентилятор как ползунок",
+                "Show vanes as range": "Отображать жалюзи как ползунок",
+                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
+                "Baud rate": "Скорость обмена",
+                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
+                "Parity bit": "Бит чётности",
+                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
                 "Active": "Состояние",
                 "Mode": "Режим",
-                "Active mode": "Состояние и режим",
-                "Fan speed": "Скорость вентилятора",
-                "Smart fan speed": "Скорость вентилятора расширенная",
-                "Show modes as range": "Отображать режимы как ползунок",
-                "Off": "Выключен",
                 "Heat": "Нагрев",
                 "Cool": "Охлаждение",
                 "Auto": "Авто",
                 "Dry": "Осушение",
                 "Fan": "Вентиляция",
-                "Idle": "Простаивает",
-                "Heating": "Нагрев",
-                "Cooling": "Охлаждение",
-                "Temperature control": "Контроль температуры",
-                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
+                "Active mode": "Состояние и режим",
+                "Off": "Выключен",
+                "Fan speed": "Скорость вентилятора",
+                "1 Speed": "1 Скорость",
+                "2 Speed": "2 Скорость",
+                "3 Speed": "3 Скорость",
+                "4 Speed": "4 Скорость",
+                "5 Speed": "5 Скорость",
+                "Smart fan speed": "Скорость вентилятора расширенная",
+                "Quiet mode": "Режим тихий",
+                "Turbo mode": "Режим турбо",
                 "Indoor air temperature": "Температура воздуха в помещении",
                 "Outdoor air temperature": "Температура воздуха на улице",
                 "Target temperature": "Целевая температура",
-                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
+                "Temperature correction": "Коррекция температуры",
                 "Thermostat state": "Состояние термостата",
-                "Vanes": "Жалюзи",
-                "Show vanes as range": "Отображать жалюзи как ползунок",
+                "Idle": "Простаивает",
+                "Heating": "Нагрев",
+                "Cooling": "Охлаждение",
                 "Horizontal vanes": "Горизонтальные жалюзи",
+                "Stop": "Остановлены",
                 "Swing": "Качание",
                 "Lowest": "Самое низкое",
                 "Low": "Низкое",
                 "Middle": "Среднее",
                 "High": "Высокое",
                 "Highest": "Самое высокое",
+                "Vanes swing": "Качание жалюзи",
+                "Horizontal and vertical vanes swing": "Качание горизонтальных и вертикальных жалюзи",
+                "Horizontal vanes swing": "Качание горизонтальных жалюзи",
+                "Vertical vanes swing": "Качание вертикальных жалюзи",
+                "Vertical vanes": "Вертикальные жалюзи",
                 "Far Left": "Самое левое",
                 "Left": "Левое",
                 "Right": "Правое",
                 "Far Right": "Самое правое",
-                "Vertical vanes": "Вертикальные жалюзи",
-                "Vanes swing": "Качание жалюзи",
-                "Stop": "Остановлены",
-                "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
-                "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
-                "Swinging vertical blinds": "Качание вертикальных жалюзи",
-                "Show fan as range": "Отображать вентилятор как ползунок",
-                "Additional": "Дополнительные режимы и функции",
-                "1 Speed": "1 Скорость",
-                "2 Speed": "2 Скорость",
-                "3 Speed": "3 Скорость",
-                "4 Speed": "4 Скорость",
-                "5 Speed": "5 Скорость",
-                "Quiet mode": "Режим тихий",
                 "Eco mode": "Режим эко",
-                "Turbo mode": "Режим турбо",
-                "Sleep mode": "Режим сна",
                 "Ionization": "Ионизация",
-                "Indication": "Индикация",
-                "Screen light": "Подсветка экрана",
+                "Sleep mode": "Режим сна",
                 "Disable screen when power off": "Отключать экран при отключении питания",
-                "No": "Нет",
-                "Yes": "Да",
-                "Baud rate": "Скорость обмена",
-                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
-                "Parity bit": "Бит чётности",
-                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
-                "HW Info": "Данные модуля",
-                "HW Version": "Версия устройства",
+                "Screen light": "Подсветка экрана",
                 "FW Version": "Версия прошивки",
+                "HW Version": "Версия устройства",
+                "MCU Temperature": "Температура МК",
                 "PROTO Version": "Версия протокола",
+                "Reboot Device": "Перезагрузить устройство",
+                "Serial": "Серийный номер",
                 "Signature": "Сигнатура устройства",
                 "Uptime": "Время работы с момента включения (с)",
-                "MCU Temperature": "Температура МК",
-                "Serial": "Серийный номер",
-                "Reboot Device": "Перезагрузить устройство",
-                "Debug": "Диагностика",
-                "Temeperature correction": "Коррекция температуры",
-                "AC connected": "Кондиционер подключен"
+                "AC connected": "Кондиционер подключен",
+                "Normal mode": "Обычный режим",
+                "Disabled if no errors": "Отключен если нет ошибок",
+                "Disabled untill reboot": "Отключен до перезагрузки",
+                "Always disabled": "Всегда отключен",
+                "Green untill reboot": "Зеленый до перезагрузки",
+                "Red untill reboot": "Красный до перезагрузки",
+                "template_title": "ONOKOM AIR GR-1-MB-B (Адаптер для бытовых систем GREE)"
             }
         }
     }
