--- a/templates/config-onokom-air-hs-6-mb-b-depricated.json
+++ b/templates/config-onokom-air-hs-6-mb-b-depricated.json
@@ -1,15 +1,16 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-MD-3-MB-B",
+    "device_type": "ONOKOM-AIR-HS-6-MB-B",
+    "deprecated": true,
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "MD-3-MB-B"
+            "signature": "HS-6-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-MD-3-MB-B",
-        "id": "ONOKOM-AIR-MD-3-MB-B",
+        "name": "ONOKOM-AIR-HS-6-MB-B",
+        "id": "ONOKOM-AIR-HS-6-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -270,6 +271,8 @@
                 "address": 7,
                 "type": "value",
                 "format": "u16",
+                "min": 0,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
@@ -363,19 +366,6 @@
                 "units": "deg C"
             },
             {
-                "name": "Outdoor heat exchanger temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 24,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
                 "name": "Target temperature",
                 "reg_type": "holding",
                 "address": 5,
@@ -387,18 +377,6 @@
                 "sporadic": true,
                 "group": "temperatureControl",
                 "units": "deg C"
-            },
-            {
-                "name": "Temperature correction",
-                "reg_type": "holding",
-                "address": 20,
-                "type": "value",
-                "format": "s16",
-                "min": -30,
-                "max": 30,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
                 "name": "Thermostat state",
@@ -435,86 +413,48 @@
                 "condition": "Show_thermostat_state_as_range!=1"
             },
             {
-                "name": "Horizontal vanes",
-                "reg_type": "holding",
-                "address": 9,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Horizontal vanes",
-                "reg_type": "holding",
-                "address": 9,
-                "type": "value",
-                "format": "u16",
-                "sporadic": true,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Swing"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Vanes swing",
-                "reg_type": "holding",
-                "address": 11,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 3,
-                "sporadic": false,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Vanes swing",
-                "reg_type": "holding",
-                "address": 11,
-                "type": "value",
-                "format": "u16",
-                "sporadic": false,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    2
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Horizontal vanes swing"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Eco mode",
+                "name": "Sleep mode",
                 "enabled": false,
                 "reg_type": "coil",
-                "address": 6,
+                "address": 8,
                 "type": "switch",
                 "sporadic": true,
-                "group": "additional",
-                "readonly": true
+                "group": "additional"
             },
             {
-                "name": "FW Version",
+                "name": "Current fan speed",
                 "enabled": false,
                 "reg_type": "holding",
-                "address": 250,
-                "type": "text",
-                "format": "string",
+                "address": 32,
+                "type": "range",
+                "min": 1,
+                "max": 3,
                 "sporadic": true,
-                "group": "hw_info",
+                "group": "debug",
                 "readonly": true,
-                "string_data_size": 16
+                "units": "rpm"
+            },
+            {
+                "name": "Current compressor power",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 21,
+                "type": "range",
+                "min": 0,
+                "max": 100,
+                "sporadic": true,
+                "group": "debug",
+                "readonly": true,
+                "units": "%"
+            },
+            {
+                "name": "AC connected",
+                "reg_type": "coil",
+                "address": 20,
+                "type": "switch",
+                "sporadic": true,
+                "group": "debug",
+                "readonly": true
             },
             {
                 "name": "HW Version",
@@ -529,14 +469,16 @@
                 "string_data_size": 20
             },
             {
-                "name": "MCU Temperature",
+                "name": "FW Version",
                 "enabled": false,
-                "reg_type": "input",
-                "address": 124,
-                "type": "temperature",
-                "format": "s16",
-                "scale": 0.1,
-                "group": "hw_info"
+                "reg_type": "holding",
+                "address": 250,
+                "type": "text",
+                "format": "string",
+                "sporadic": true,
+                "group": "hw_info",
+                "readonly": true,
+                "string_data_size": 16
             },
             {
                 "name": "PROTO Version",
@@ -551,24 +493,6 @@
                 "string_data_size": 16
             },
             {
-                "name": "Reboot Device",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 120,
-                "type": "pushbutton",
-                "group": "hw_info"
-            },
-            {
-                "name": "Serial",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 270,
-                "type": "text",
-                "format": "u32",
-                "group": "hw_info",
-                "readonly": true
-            },
-            {
                 "name": "Signature",
                 "enabled": false,
                 "reg_type": "input",
@@ -581,6 +505,16 @@
                 "string_data_size": 12
             },
             {
+                "name": "Serial",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 270,
+                "type": "text",
+                "format": "u32",
+                "group": "hw_info",
+                "readonly": true
+            },
+            {
                 "name": "Uptime",
                 "enabled": false,
                 "reg_type": "input",
@@ -590,82 +524,80 @@
                 "group": "hw_info"
             },
             {
-                "name": "AC connected",
-                "reg_type": "coil",
-                "address": 20,
-                "type": "switch",
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true
+                "name": "MCU Temperature",
+                "enabled": false,
+                "reg_type": "input",
+                "address": 124,
+                "type": "temperature",
+                "format": "s16",
+                "scale": 0.1,
+                "group": "hw_info"
+            },
+            {
+                "name": "Reboot Device",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 120,
+                "type": "pushbutton",
+                "group": "hw_info"
             }
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR MD-3-MB-B (Adapter for semi-industrial MDV systems)"
+                "template_title": "ONOKOM AIR HS-6-MB-B (Adapter for Hisense Semi-Industrial Systems)"
             },
             "ru": {
+                "template_title": "ONOKOM AIR HS-6-MB-B (Адаптер для полупромышленных систем Hisense)",
                 "General": "Основные режимы и функции",
-                "Temperature control": "Контроль температуры",
-                "Vanes": "Жалюзи",
-                "Additional": "Дополнительные режимы и функции",
-                "HW Info": "Данные модуля",
-                "Debug": "Диагностика",
-                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
-                "No": "Нет",
-                "Yes": "Да",
-                "Show modes as range": "Отображать режимы как ползунок",
-                "Show fan as range": "Отображать вентилятор как ползунок",
-                "Show vanes as range": "Отображать жалюзи как ползунок",
-                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
-                "Baud rate": "Скорость обмена",
-                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
-                "Parity bit": "Бит чётности",
-                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
                 "Active": "Состояние",
                 "Mode": "Режим",
+                "Active mode": "Состояние и режим",
+                "Fan speed": "Скорость вентилятора",
+                "Smart fan speed": "Скорость вентилятора расширенная",
+                "Show modes as range": "Отображать режимы как ползунок",
+                "Off": "Выключен",
                 "Heat": "Нагрев",
                 "Cool": "Охлаждение",
                 "Auto": "Авто",
                 "Dry": "Осушение",
                 "Fan": "Вентиляция",
-                "Active mode": "Состояние и режим",
-                "Off": "Выключен",
-                "Fan speed": "Скорость вентилятора",
-                "1 Speed": "1 Скорость",
-                "2 Speed": "2 Скорость",
-                "3 Speed": "3 Скорость",
-                "Smart fan speed": "Скорость вентилятора расширенная",
-                "Indoor air temperature": "Температура воздуха в помещении",
-                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
-                "Outdoor heat exchanger temperature": "Температура внешнего теплообменника",
-                "Target temperature": "Целевая температура",
-                "Temperature correction": "Коррекция температуры",
-                "Thermostat state": "Состояние термостата",
                 "Idle": "Простаивает",
                 "Heating": "Нагрев",
                 "Cooling": "Охлаждение",
-                "Horizontal vanes": "Горизонтальные жалюзи",
-                "Stop": "Остановлены",
-                "Swing": "Качание",
-                "Vanes swing": "Качание жалюзи",
-                "Horizontal vanes swing": "Качание горизонтальных жалюзи",
-                "Eco mode": "Режим эко",
-                "FW Version": "Версия прошивки",
+                "Temperature control": "Контроль температуры",
+                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
+                "Indoor air temperature": "Температура воздуха в помещении",
+                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
+                "Target temperature": "Целевая температура",
+                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
+                "Thermostat state": "Состояние термостата",
+                "Vanes": "Жалюзи",
+                "Show vanes as range": "Отображать жалюзи как ползунок",
+                "Show fan as range": "Отображать вентилятор как ползунок",
+                "Additional": "Дополнительные режимы и функции",
+                "1 Speed": "1 Скорость",
+                "2 Speed": "2 Скорость",
+                "3 Speed": "3 Скорость",
+                "Sleep mode": "Режим сна",
+                "No": "Нет",
+                "Yes": "Да",
+                "Baud rate": "Скорость обмена",
+                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
+                "Parity bit": "Бит чётности",
+                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
+                "HW Info": "Данные модуля",
                 "HW Version": "Версия устройства",
-                "MCU Temperature": "Температура МК",
+                "FW Version": "Версия прошивки",
                 "PROTO Version": "Версия протокола",
-                "Reboot Device": "Перезагрузить устройство",
-                "Serial": "Серийный номер",
                 "Signature": "Сигнатура устройства",
                 "Uptime": "Время работы с момента включения (с)",
-                "AC connected": "Кондиционер подключен",
-                "Normal mode": "Обычный режим",
-                "Disabled if no errors": "Отключен если нет ошибок",
-                "Disabled untill reboot": "Отключен до перезагрузки",
-                "Always disabled": "Всегда отключен",
-                "Green untill reboot": "Зеленый до перезагрузки",
-                "Red untill reboot": "Красный до перезагрузки",
-                "template_title": "ONOKOM AIR MD-3-MB-B (Адаптер для полупромышленных систем MDV)"
+                "MCU Temperature": "Температура МК",
+                "Serial": "Серийный номер",
+                "Reboot Device": "Перезагрузить устройство",
+                "Debug": "Диагностика",
+                "Current compressor power": "Текущая мощность компрессора",
+                "Current fan speed": "Текущая скорость вентилятора",
+                "AC connected": "Кондиционер подключен"
             }
         }
     }
