--- a/templates/config-onokom-air-ht-1-mb-b-depricated.json
+++ b/templates/config-onokom-air-ht-1-mb-b-depricated.json
@@ -1,15 +1,16 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-HS-6-MB-B",
+    "device_type": "ONOKOM-AIR-HT-1-MB-B",
+    "deprecated": true,
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "HS-6-MB-B"
+            "signature": "HT-1-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-HS-6-MB-B",
-        "id": "ONOKOM-AIR-HS-6-MB-B",
+        "name": "ONOKOM-AIR-HT-1-MB-B",
+        "id": "ONOKOM-AIR-HT-1-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -20,11 +21,6 @@
                 "title": "Temperature control",
                 "id": "temperatureControl",
                 "order": 2
-            },
-            {
-                "title": "Additional",
-                "id": "additional",
-                "order": 4
             },
             {
                 "title": "HW Info",
@@ -38,70 +34,6 @@
             }
         ],
         "parameters": [
-            {
-                "id": "Allow_the_use_of_an_external_temperature_sensor",
-                "title": "Allow the use of an external temperature sensor",
-                "address": 100,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "temperatureControl",
-                "order": 1
-            },
-            {
-                "id": "Show_modes_as_range",
-                "title": "Show modes as range",
-                "address": 95,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "general",
-                "order": 1
-            },
-            {
-                "id": "Show_fan_as_range",
-                "title": "Show fan as range",
-                "address": 92,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "general",
-                "order": 1
-            },
-            {
-                "id": "Show_thermostat_state_as_range",
-                "title": "Show thermostat state as range",
-                "address": 94,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "temperatureControl",
-                "order": 1
-            },
             {
                 "id": "baud_rate",
                 "title": "Baud rate",
@@ -122,26 +54,6 @@
                     "38400",
                     "57600",
                     "115200"
-                ],
-                "group": "hw_info",
-                "order": 1
-            },
-            {
-                "id": "parity_bit",
-                "title": "Parity bit",
-                "description": "parity_bit_description",
-                "address": 111,
-                "reg_type": "holding",
-                "enum": [
-                    0,
-                    1,
-                    2
-                ],
-                "default": 0,
-                "enum_titles": [
-                    "none (N)",
-                    "odd (O)",
-                    "even (E)"
                 ],
                 "group": "hw_info",
                 "order": 1
@@ -238,7 +150,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 3,
+                "max": 5,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -249,6 +161,8 @@
                 "address": 7,
                 "type": "value",
                 "format": "u16",
+                "min": 0,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
@@ -272,7 +186,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 4,
+                "max": 6,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -329,26 +243,13 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Indoor heat exchanger temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 23,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
                 "name": "Target temperature",
                 "reg_type": "holding",
                 "address": 5,
                 "type": "range",
                 "format": "s16",
                 "min": 16,
-                "max": 30,
+                "max": 32,
                 "scale": 0.01,
                 "sporadic": true,
                 "group": "temperatureControl",
@@ -389,25 +290,25 @@
                 "condition": "Show_thermostat_state_as_range!=1"
             },
             {
-                "name": "Sleep mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 8,
-                "type": "switch",
+                "name": "Temeperature correction",
+                "reg_type": "holding",
+                "address": 20,
+                "type": "value",
+                "format": "s16",
+                "min": -30,
+                "max": 30,
                 "sporadic": true,
-                "group": "additional"
+                "group": "temperatureControl",
+                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "FW Version",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 250,
-                "type": "text",
-                "format": "string",
+                "name": "AC connected",
+                "reg_type": "coil",
+                "address": 20,
+                "type": "switch",
                 "sporadic": true,
-                "group": "hw_info",
-                "readonly": true,
-                "string_data_size": 16
+                "group": "debug",
+                "readonly": true
             },
             {
                 "name": "HW Version",
@@ -422,14 +323,16 @@
                 "string_data_size": 20
             },
             {
-                "name": "MCU Temperature",
+                "name": "FW Version",
                 "enabled": false,
-                "reg_type": "input",
-                "address": 124,
-                "type": "temperature",
-                "format": "s16",
-                "scale": 0.1,
-                "group": "hw_info"
+                "reg_type": "holding",
+                "address": 250,
+                "type": "text",
+                "format": "string",
+                "sporadic": true,
+                "group": "hw_info",
+                "readonly": true,
+                "string_data_size": 16
             },
             {
                 "name": "PROTO Version",
@@ -444,24 +347,6 @@
                 "string_data_size": 16
             },
             {
-                "name": "Reboot Device",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 120,
-                "type": "pushbutton",
-                "group": "hw_info"
-            },
-            {
-                "name": "Serial",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 270,
-                "type": "text",
-                "format": "u32",
-                "group": "hw_info",
-                "readonly": true
-            },
-            {
                 "name": "Signature",
                 "enabled": false,
                 "reg_type": "input",
@@ -474,6 +359,16 @@
                 "string_data_size": 12
             },
             {
+                "name": "Serial",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 270,
+                "type": "text",
+                "format": "u32",
+                "group": "hw_info",
+                "readonly": true
+            },
+            {
                 "name": "Uptime",
                 "enabled": false,
                 "reg_type": "input",
@@ -483,101 +378,66 @@
                 "group": "hw_info"
             },
             {
-                "name": "AC connected",
-                "reg_type": "coil",
-                "address": 20,
-                "type": "switch",
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true
+                "name": "MCU Temperature",
+                "enabled": false,
+                "reg_type": "input",
+                "address": 124,
+                "type": "temperature",
+                "format": "s16",
+                "scale": 0.1,
+                "group": "hw_info"
             },
             {
-                "name": "Current compressor power",
+                "name": "Reboot Device",
                 "enabled": false,
                 "reg_type": "holding",
-                "address": 21,
-                "type": "range",
-                "min": 0,
-                "max": 100,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "%"
-            },
-            {
-                "name": "Current fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 32,
-                "type": "range",
-                "min": 1,
-                "max": 3,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "rpm"
+                "address": 120,
+                "type": "pushbutton",
+                "group": "hw_info"
             }
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR HS-6-MB-B (Adapter for Hisense Semi-Industrial Systems)"
+                "template_title": "ONOKOM AIR HT-1-MB-B (Adapter for household Hitachi systems)"
             },
             "ru": {
+                "template_title": "ONOKOM AIR HT-1-MB-B (Адаптер для бытовых систем Hitachi)",
                 "General": "Основные режимы и функции",
-                "Temperature control": "Контроль температуры",
-                "Additional": "Дополнительные режимы и функции",
-                "HW Info": "Данные модуля",
-                "Debug": "Диагностика",
-                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
-                "No": "Нет",
-                "Yes": "Да",
-                "Show modes as range": "Отображать режимы как ползунок",
-                "Show fan as range": "Отображать вентилятор как ползунок",
-                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
-                "Baud rate": "Скорость обмена",
-                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
-                "Parity bit": "Бит чётности",
-                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
                 "Active": "Состояние",
                 "Mode": "Режим",
+                "Active mode": "Состояние и режим",
+                "Fan speed": "Скорость вентилятора",
+                "Smart fan speed": "Скорость вентилятора расширенная",
+                "Off": "Выключен",
                 "Heat": "Нагрев",
                 "Cool": "Охлаждение",
                 "Auto": "Авто",
                 "Dry": "Осушение",
                 "Fan": "Вентиляция",
-                "Active mode": "Состояние и режим",
-                "Off": "Выключен",
-                "Fan speed": "Скорость вентилятора",
-                "1 Speed": "1 Скорость",
-                "2 Speed": "2 Скорость",
-                "3 Speed": "3 Скорость",
-                "Smart fan speed": "Скорость вентилятора расширенная",
-                "Indoor air temperature": "Температура воздуха в помещении",
-                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
-                "Target temperature": "Целевая температура",
-                "Thermostat state": "Состояние термостата",
                 "Idle": "Простаивает",
                 "Heating": "Нагрев",
                 "Cooling": "Охлаждение",
-                "Sleep mode": "Режим сна",
-                "FW Version": "Версия прошивки",
+                "Temperature control": "Контроль температуры",
+                "Indoor air temperature": "Температура воздуха в помещении",
+                "Target temperature": "Целевая температура",
+                "Thermostat state": "Состояние термостата",
+                "1 Speed": "1 Скорость",
+                "2 Speed": "2 Скорость",
+                "3 Speed": "3 Скорость",
+                "Baud rate": "Скорость обмена",
+                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
+                "HW Info": "Данные модуля",
                 "HW Version": "Версия устройства",
-                "MCU Temperature": "Температура МК",
+                "FW Version": "Версия прошивки",
                 "PROTO Version": "Версия протокола",
-                "Reboot Device": "Перезагрузить устройство",
-                "Serial": "Серийный номер",
                 "Signature": "Сигнатура устройства",
                 "Uptime": "Время работы с момента включения (с)",
-                "AC connected": "Кондиционер подключен",
-                "Current compressor power": "Текущая мощность компрессора",
-                "Current fan speed": "Текущая скорость вентилятора",
-                "Normal mode": "Обычный режим",
-                "Disabled if no errors": "Отключен если нет ошибок",
-                "Disabled untill reboot": "Отключен до перезагрузки",
-                "Always disabled": "Всегда отключен",
-                "Green untill reboot": "Зеленый до перезагрузки",
-                "Red untill reboot": "Красный до перезагрузки",
-                "template_title": "ONOKOM AIR HS-6-MB-B (Адаптер для полупромышленных систем Hisense)"
+                "MCU Temperature": "Температура МК",
+                "Serial": "Серийный номер",
+                "Reboot Device": "Перезагрузить устройство",
+                "Debug": "Диагностика",
+                "Temeperature correction": "Коррекция температуры",
+                "AC connected": "Кондиционер подключен"
             }
         }
     }
