--- a/templates/config-onokom-air-mh-2-mb-b-depricated.json
+++ b/templates/config-onokom-air-mh-2-mb-b-depricated.json
@@ -1,15 +1,16 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-MD-3-MB-B",
+    "device_type": "ONOKOM-AIR-MH-2-MB-B",
+    "deprecated": true,
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "MD-3-MB-B"
+            "signature": "MH-2-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-MD-3-MB-B",
-        "id": "ONOKOM-AIR-MD-3-MB-B",
+        "name": "ONOKOM-AIR-MH-2-MB-B",
+        "id": "ONOKOM-AIR-MH-2-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -25,11 +26,6 @@
                 "title": "Vanes",
                 "id": "vanes",
                 "order": 3
-            },
-            {
-                "title": "Additional",
-                "id": "additional",
-                "order": 4
             },
             {
                 "title": "HW Info",
@@ -259,7 +255,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 3,
+                "max": 4,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -270,19 +266,23 @@
                 "address": 7,
                 "type": "value",
                 "format": "u16",
+                "min": 0,
+                "max": 4,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
                     0,
                     1,
                     2,
-                    3
+                    3,
+                    4
                 ],
                 "enum_titles": [
                     "Auto",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed"
+                    "3 Speed",
+                    "4 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -293,7 +293,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 4,
+                "max": 5,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -305,20 +305,23 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 4,
+                "max": 5,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
                     0,
                     2,
                     3,
-                    4
+                    4,
+                    5
                 ],
                 "enum_titles": [
                     "Auto",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed"
+                    "3 Speed",
+                    "4 Speed",
+                    "5 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -350,32 +353,6 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Indoor heat exchanger temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 23,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
-                "name": "Outdoor heat exchanger temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 24,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
                 "name": "Target temperature",
                 "reg_type": "holding",
                 "address": 5,
@@ -387,18 +364,6 @@
                 "sporadic": true,
                 "group": "temperatureControl",
                 "units": "deg C"
-            },
-            {
-                "name": "Temperature correction",
-                "reg_type": "holding",
-                "address": 20,
-                "type": "value",
-                "format": "s16",
-                "min": -30,
-                "max": 30,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
                 "name": "Thermostat state",
@@ -441,7 +406,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 1,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "condition": "Show_vanes_as_range==1"
@@ -452,15 +417,69 @@
                 "address": 9,
                 "type": "value",
                 "format": "u16",
+                "min": 0,
+                "max": 6,
                 "sporadic": true,
                 "group": "vanes",
                 "enum": [
                     0,
-                    1
+                    1,
+                    2,
+                    3,
+                    4,
+                    5,
+                    6
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Swing"
+                    "Swing",
+                    "Lowest",
+                    "Low",
+                    "Middle",
+                    "High",
+                    "Highest"
+                ],
+                "condition": "Show_vanes_as_range!=1"
+            },
+            {
+                "name": "Vertical vanes",
+                "reg_type": "holding",
+                "address": 10,
+                "type": "range",
+                "format": "u16",
+                "min": 0,
+                "max": 6,
+                "sporadic": true,
+                "group": "vanes",
+                "condition": "Show_vanes_as_range==1"
+            },
+            {
+                "name": "Vertical vanes",
+                "reg_type": "holding",
+                "address": 10,
+                "type": "value",
+                "format": "u16",
+                "min": 0,
+                "max": 6,
+                "sporadic": true,
+                "group": "vanes",
+                "enum": [
+                    0,
+                    1,
+                    2,
+                    3,
+                    4,
+                    5,
+                    6
+                ],
+                "enum_titles": [
+                    "Stop",
+                    "Swing",
+                    "Far Left",
+                    "Left",
+                    "Middle",
+                    "Right",
+                    "Far Right"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
@@ -486,35 +505,38 @@
                 "group": "vanes",
                 "enum": [
                     0,
-                    2
+                    1,
+                    2,
+                    3
                 ],
                 "enum_titles": [
                     "Stop",
-                    "Horizontal vanes swing"
+                    "Horizontal and vertical swing",
+                    "Swinging horizontal blinds",
+                    "Swinging vertical blinds"
                 ],
                 "condition": "Show_vanes_as_range!=1"
             },
             {
-                "name": "Eco mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 6,
-                "type": "switch",
+                "name": "Temeperature correction",
+                "reg_type": "holding",
+                "address": 20,
+                "type": "value",
+                "format": "s16",
+                "min": -30,
+                "max": 30,
                 "sporadic": true,
-                "group": "additional",
-                "readonly": true
+                "group": "temperatureControl",
+                "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "FW Version",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 250,
-                "type": "text",
-                "format": "string",
+                "name": "AC connected",
+                "reg_type": "coil",
+                "address": 20,
+                "type": "switch",
                 "sporadic": true,
-                "group": "hw_info",
-                "readonly": true,
-                "string_data_size": 16
+                "group": "debug",
+                "readonly": true
             },
             {
                 "name": "HW Version",
@@ -529,14 +551,16 @@
                 "string_data_size": 20
             },
             {
-                "name": "MCU Temperature",
+                "name": "FW Version",
                 "enabled": false,
-                "reg_type": "input",
-                "address": 124,
-                "type": "temperature",
-                "format": "s16",
-                "scale": 0.1,
-                "group": "hw_info"
+                "reg_type": "holding",
+                "address": 250,
+                "type": "text",
+                "format": "string",
+                "sporadic": true,
+                "group": "hw_info",
+                "readonly": true,
+                "string_data_size": 16
             },
             {
                 "name": "PROTO Version",
@@ -551,24 +575,6 @@
                 "string_data_size": 16
             },
             {
-                "name": "Reboot Device",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 120,
-                "type": "pushbutton",
-                "group": "hw_info"
-            },
-            {
-                "name": "Serial",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 270,
-                "type": "text",
-                "format": "u32",
-                "group": "hw_info",
-                "readonly": true
-            },
-            {
                 "name": "Signature",
                 "enabled": false,
                 "reg_type": "input",
@@ -581,6 +587,16 @@
                 "string_data_size": 12
             },
             {
+                "name": "Serial",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 270,
+                "type": "text",
+                "format": "u32",
+                "group": "hw_info",
+                "readonly": true
+            },
+            {
                 "name": "Uptime",
                 "enabled": false,
                 "reg_type": "input",
@@ -590,82 +606,95 @@
                 "group": "hw_info"
             },
             {
-                "name": "AC connected",
-                "reg_type": "coil",
-                "address": 20,
-                "type": "switch",
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true
+                "name": "MCU Temperature",
+                "enabled": false,
+                "reg_type": "input",
+                "address": 124,
+                "type": "temperature",
+                "format": "s16",
+                "scale": 0.1,
+                "group": "hw_info"
+            },
+            {
+                "name": "Reboot Device",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 120,
+                "type": "pushbutton",
+                "group": "hw_info"
             }
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR MD-3-MB-B (Adapter for semi-industrial MDV systems)"
+                "template_title": "ONOKOM AIR MH-2-MB-B (Adapter for household and semi-industrial Mitsubishi Heavy systems)"
             },
             "ru": {
+                "template_title": "ONOKOM AIR MH-2-MB-B (Адаптер для бытовых и полупромышленных систем Mitsubishi Heavy)",
                 "General": "Основные режимы и функции",
-                "Temperature control": "Контроль температуры",
-                "Vanes": "Жалюзи",
-                "Additional": "Дополнительные режимы и функции",
-                "HW Info": "Данные модуля",
-                "Debug": "Диагностика",
-                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
-                "No": "Нет",
-                "Yes": "Да",
-                "Show modes as range": "Отображать режимы как ползунок",
-                "Show fan as range": "Отображать вентилятор как ползунок",
-                "Show vanes as range": "Отображать жалюзи как ползунок",
-                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
-                "Baud rate": "Скорость обмена",
-                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
-                "Parity bit": "Бит чётности",
-                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
                 "Active": "Состояние",
                 "Mode": "Режим",
+                "Active mode": "Состояние и режим",
+                "Fan speed": "Скорость вентилятора",
+                "Smart fan speed": "Скорость вентилятора расширенная",
+                "Show modes as range": "Отображать режимы как ползунок",
+                "Off": "Выключен",
                 "Heat": "Нагрев",
                 "Cool": "Охлаждение",
                 "Auto": "Авто",
                 "Dry": "Осушение",
                 "Fan": "Вентиляция",
-                "Active mode": "Состояние и режим",
-                "Off": "Выключен",
-                "Fan speed": "Скорость вентилятора",
-                "1 Speed": "1 Скорость",
-                "2 Speed": "2 Скорость",
-                "3 Speed": "3 Скорость",
-                "Smart fan speed": "Скорость вентилятора расширенная",
-                "Indoor air temperature": "Температура воздуха в помещении",
-                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
-                "Outdoor heat exchanger temperature": "Температура внешнего теплообменника",
-                "Target temperature": "Целевая температура",
-                "Temperature correction": "Коррекция температуры",
-                "Thermostat state": "Состояние термостата",
                 "Idle": "Простаивает",
                 "Heating": "Нагрев",
                 "Cooling": "Охлаждение",
+                "Temperature control": "Контроль температуры",
+                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
+                "Indoor air temperature": "Температура воздуха в помещении",
+                "Target temperature": "Целевая температура",
+                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
+                "Thermostat state": "Состояние термостата",
+                "Vanes": "Жалюзи",
+                "Show vanes as range": "Отображать жалюзи как ползунок",
                 "Horizontal vanes": "Горизонтальные жалюзи",
-                "Stop": "Остановлены",
                 "Swing": "Качание",
+                "Lowest": "Самое низкое",
+                "Low": "Низкое",
+                "Middle": "Среднее",
+                "High": "Высокое",
+                "Highest": "Самое высокое",
+                "Far Left": "Самое левое",
+                "Left": "Левое",
+                "Right": "Правое",
+                "Far Right": "Самое правое",
+                "Vertical vanes": "Вертикальные жалюзи",
                 "Vanes swing": "Качание жалюзи",
-                "Horizontal vanes swing": "Качание горизонтальных жалюзи",
-                "Eco mode": "Режим эко",
-                "FW Version": "Версия прошивки",
+                "Stop": "Остановлены",
+                "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
+                "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
+                "Swinging vertical blinds": "Качание вертикальных жалюзи",
+                "Show fan as range": "Отображать вентилятор как ползунок",
+                "1 Speed": "1 Скорость",
+                "2 Speed": "2 Скорость",
+                "3 Speed": "3 Скорость",
+                "4 Speed": "4 Скорость",
+                "5 Speed": "5 Скорость",
+                "No": "Нет",
+                "Yes": "Да",
+                "Baud rate": "Скорость обмена",
+                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
+                "Parity bit": "Бит чётности",
+                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
+                "HW Info": "Данные модуля",
                 "HW Version": "Версия устройства",
-                "MCU Temperature": "Температура МК",
+                "FW Version": "Версия прошивки",
                 "PROTO Version": "Версия протокола",
-                "Reboot Device": "Перезагрузить устройство",
-                "Serial": "Серийный номер",
                 "Signature": "Сигнатура устройства",
                 "Uptime": "Время работы с момента включения (с)",
-                "AC connected": "Кондиционер подключен",
-                "Normal mode": "Обычный режим",
-                "Disabled if no errors": "Отключен если нет ошибок",
-                "Disabled untill reboot": "Отключен до перезагрузки",
-                "Always disabled": "Всегда отключен",
-                "Green untill reboot": "Зеленый до перезагрузки",
-                "Red untill reboot": "Красный до перезагрузки",
-                "template_title": "ONOKOM AIR MD-3-MB-B (Адаптер для полупромышленных систем MDV)"
+                "MCU Temperature": "Температура МК",
+                "Serial": "Серийный номер",
+                "Reboot Device": "Перезагрузить устройство",
+                "Debug": "Диагностика",
+                "Temeperature correction": "Коррекция температуры",
+                "AC connected": "Кондиционер подключен"
             }
         }
     }
